--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -98,3 +98,28 @@ img {
 	margin-right: 1rem;
 	margin-bottom: 0.5rem;
 }
+
+// code
+pre, code {
+	font: 400 1rem Inconsolata, monospace;
+}
+
+pre {
+	padding: 1rem;
+	white-space: pre-wrap;
+}
+
+code {
+	background: #ededed;
+	color: #333;
+	padding: .1rem .25rem;
+	line-height: 100%;
+	cursor: text;
+}
+
+pre code {
+	background: transparent;
+	line-height: 120%;
+	padding: 0;
+	color: #eee;
+}
