--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -100,28 +100,12 @@ img {
 }
 
 // code
-pre, code {
-	font: 400 1rem Inconsolata, monospace;
-}
-
-pre {
-	padding: 1rem;
-	white-space: pre-wrap;
-}
-
 code {
-	background: #ededed;
-	color: #333;
-	padding: .1rem .25rem;
-	line-height: 100%;
-	cursor: text;
-}
-
-pre code {
-	background: transparent;
-	line-height: 120%;
-	padding: 0;
-	color: #eee;
+    padding: 2px 4px;
+    font-size: 90%;
+    color: #c7254e;
+    background-color: #f9f2f4;
+    border-radius: 4px
 }
 
 .highlight pre { background-color: #272822; color: #eee }
