--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
         <link rel="stylesheet" href="{{ '/css/styles.css' | prepend:site.url }}" />
         <link href="https://fonts.googleapis.com/css?family=Inconsolata&display=swap" rel="stylesheet" />
-        <link rel="icon" type="imge/x-icon" href="{{ '/assets/favicon.ico' | prepend:site.url }}" />
+        <link rel="icon" type="imge/x-icon" href="{{ '/_assets/favicon.ico' | prepend:site.url }}" />
     </head>
     
     <body>
