fix css folder path

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,7 @@
         <title>{{ site.title }}{% if page.title %} | {{ page.title }}{% endif %}</title>
         <meta name="description" content="{% if post %}{{ post.content | strip_html | truncatewords: 70 }}{% endif %}{% unless page.description %}{{ site.description }}{% endunless %}" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-        <link rel="stylesheet" href="{{ '/css/styles.css' | prepend:site.url }}" />
+		<link rel="stylesheet" href="{{ '/styles/styles.css' | prepend:site.url }}">
         <link href="https://fonts.googleapis.com/css?family=Inconsolata&display=swap" rel="stylesheet" />
         <link rel="icon" type="imge/x-icon" href="{{ '/_assets/favicon.ico' | prepend:site.url }}" />
     </head>
