--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,8 +1,15 @@
 ---
 ---
+
+@import url('https://rsms.me/inter/inter.css');
+html { font-family: 'Inter', sans-serif; }
+@supports (font-variation-settings: normal) {
+  html { font-family: 'Inter var', sans-serif; }
+}
+
 $accent-color: #b00; // link color
-$font-stack: system-ui, Helvetica, Arial, sans-serif;
-$heading-font-stack: system-ui, Helvetica, Arial, sans-serif; // use this to set a different font for your headings if you want
+$font-stack: system-ui, Inter, sans-serif;
+$heading-font-stack: system-ui, Inter, sans-serif; // use this to set a different font for your headings if you want
 
 // reset
 * {
