--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -118,6 +118,10 @@ img {
 	margin-top:1rem;font-size:1.25rem;max-width:30em
 }
 
+.project-list-item-title-big {
+	margin-top:1rem;font-size:2.5rem;max-width:30em
+}
+
 #portrait {
 	width: 7rem;
 	height: 7rem;
